--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(Sorting_Algorithms_ C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(Sorting_Algorithms_ main.c)
+add_executable(Sorting_Algorithms_ main.c
+        merge_sort.h
+        selection_sort.h
+        swap.h
+        insertion_sort.h
+        heap_sort.h
+        bubble_sort.h)
